@@ -1,3 +1,7 @@
+2008-11-30  TOKI Yoshinori  <toki@freedom.ne.jp>
+
+	* lib/gluon/fstore.rb: session store by file.
+
 2008-11-25  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/application.rb, lib/gluon/errmap.rb: error handler.
